RestAuthClient 0.6.1 (XX XXXX 2013)

  * Add --part option to setup.py to only test part of the test-suite.
  * Add a small benchmark script to test performance of RestAuth services.

RestAuthClient 0.6.0 (15 September 2012)

  This release adds support for version 0.6 of the RestAuth protocol. This
  brings the following enhancements:
  * Support for HTTP status code 403 FORBIDDEN
  * Support for setting multiple user properties in a single HTTP call.

  General:
  * The whole code is now pep8 clean

RestAuthClient 0.5.1 (13 November 2011)

  General:
  * remove false statement that this library depends on python-mimeparse
  * Adapt to changes in newest RestAuthCommon version
  * RestAuthConnection.set_content_handler also accepts unicode
  
  build-related:
  * 'clean' target now removes more generated files
  * handle version in a more centralized way
  * The 'debian' branch now includes a ready-to-use debian package.
  * The new command 'prepare_debian_changelog' updates debian/changelog to the
    newest version
  
  test functions:
  * restauth_user.create_test, User.create_property_test and group.create_test
    now behave exactly like their non-test counterparts. The only difference
    is that user and group creation test methods do not return an instance of
    their respective classes.
  * create_property_test now also throws PreconditionFailed
  * Added documentation to the test methods
  
  Python3:
  * Enable SSL certificate verification in python 3.2 or later
  
  Tests:
  * Add restauth-common git-checkout to path, if its found in the same
    directory as this directory.
  * Improve test coverage
  * Switch to coverage 3.5

RestAuthClient 0.5.0 (29 August 2011)

  * Initial version based on version 0.5 of the RestAuth protocol.